terraform/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = "10.32.0.0/16"
  enable_dns_hostnames   = true #for EFS DNS resolution!
}
